--- a/Crypter.xcodeproj/xcshareddata/xcschemes/Crypter.xcscheme
+++ b/Crypter.xcodeproj/xcshareddata/xcschemes/Crypter.xcscheme
@@ -61,6 +61,12 @@
             ReferencedContainer = "container:Crypter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-e &quot;Hello world&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
